{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 58,
  "lineage": "4adefd70-db94-f899-0bb4-b9577b2a6b46",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:security-group/sg-0b6de1b0e200fe1da",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b6de1b0e200fe1da",
            "ingress": [],
            "name": "cdc-eks-c7svObBs-cluster-20231121004119850200000009",
            "name_prefix": "cdc-eks-c7svObBs-cluster-",
            "owner_id": "000288798409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cdc-eks-c7svObBs-cluster"
            },
            "tags_all": {
              "Name": "cdc-eks-c7svObBs-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:security-group/sg-080b768b5bbff6d11",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-080b768b5bbff6d11",
            "ingress": [],
            "name": "cdc-eks-c7svObBs-node-20231121004119820200000008",
            "name_prefix": "cdc-eks-c7svObBs-node-",
            "owner_id": "000288798409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cdc-eks-c7svObBs-node",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "owned"
            },
            "tags_all": {
              "Name": "cdc-eks-c7svObBs-node",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2654915181",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b6de1b0e200fe1da",
            "security_group_rule_id": "sgr-0038f936800d137fe",
            "self": false,
            "source_security_group_id": "sg-080b768b5bbff6d11",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1091862803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-0956fb6e51e0f4bb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-155345611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-0acb9e7b5e8ccab28",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1666361029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-07820477d6f6054fd",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2853224787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-05565ceb5f98bcd10",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3108830578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-0000abfab30452c5e",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3723349689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-033731c367c8c94a7",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3669897340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-08806464024c8a167",
            "self": false,
            "source_security_group_id": "sg-0b6de1b0e200fe1da",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1970955629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-0479f7c8889562a60",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1217129283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-08ee1f836b7f2491b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3973335212",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-080b768b5bbff6d11",
            "security_group_rule_id": "sgr-0c515f66ea4a1a35f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:network-acl/acl-042d8cecda10dcbfd",
            "default_network_acl_id": "acl-042d8cecda10dcbfd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-042d8cecda10dcbfd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "000288798409",
            "subnet_ids": [
              "subnet-007b298521e05e009",
              "subnet-065477315c6ff091c",
              "subnet-0a0e6a0abf2bf2aa3",
              "subnet-0b4620f69c219d7db",
              "subnet-0be388dbeb1085d07",
              "subnet-0c7bfe4ac2c68d71a"
            ],
            "tags": {
              "Name": "cdc-vpc-default"
            },
            "tags_all": {
              "Name": "cdc-vpc-default"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:route-table/rtb-062368ad20f176fd2",
            "default_route_table_id": "rtb-062368ad20f176fd2",
            "id": "rtb-062368ad20f176fd2",
            "owner_id": "000288798409",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "cdc-vpc-default"
            },
            "tags_all": {
              "Name": "cdc-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:security-group/sg-0bb17a06de9ce77f8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bb17a06de9ce77f8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "000288798409",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cdc-vpc-default"
            },
            "tags_all": {
              "Name": "cdc-vpc-default"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9530545eb18837e",
            "domain": "vpc",
            "id": "eipalloc-0c9530545eb18837e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-219-252-46.compute-1.amazonaws.com",
            "public_ip": "44.219.252.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cdc-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "cdc-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:internet-gateway/igw-0419daf0b9ed9842d",
            "id": "igw-0419daf0b9ed9842d",
            "owner_id": "000288798409",
            "tags": {
              "Name": "cdc-vpc"
            },
            "tags_all": {
              "Name": "cdc-vpc"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9530545eb18837e",
            "association_id": "eipassoc-06b69dab3bc14c09c",
            "connectivity_type": "public",
            "id": "nat-0885e79ae63ea310e",
            "network_interface_id": "eni-0fc47ea1c0e17c7ed",
            "private_ip": "10.0.4.86",
            "public_ip": "44.219.252.46",
            "subnet_id": "subnet-0be388dbeb1085d07",
            "tags": {
              "Name": "cdc-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "cdc-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f0c963dfe7059101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0885e79ae63ea310e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f0c963dfe705910",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0419daf0b9ed9842d",
            "id": "r-rtb-015cf639ab33f57bf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015cf639ab33f57bf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:route-table/rtb-02f0c963dfe705910",
            "id": "rtb-02f0c963dfe705910",
            "owner_id": "000288798409",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cdc-vpc-private"
            },
            "tags_all": {
              "Name": "cdc-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:route-table/rtb-015cf639ab33f57bf",
            "id": "rtb-015cf639ab33f57bf",
            "owner_id": "000288798409",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cdc-vpc-public"
            },
            "tags_all": {
              "Name": "cdc-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1a8e8b1dc241d73",
            "route_table_id": "rtb-02f0c963dfe705910",
            "subnet_id": "subnet-065477315c6ff091c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015b6a626a9f6a8e5",
            "route_table_id": "rtb-02f0c963dfe705910",
            "subnet_id": "subnet-007b298521e05e009"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ffb382575a6af83",
            "route_table_id": "rtb-02f0c963dfe705910",
            "subnet_id": "subnet-0a0e6a0abf2bf2aa3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f1ad179aa8cfec5",
            "route_table_id": "rtb-015cf639ab33f57bf",
            "subnet_id": "subnet-0be388dbeb1085d07"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec3fd590f04e55f3",
            "route_table_id": "rtb-015cf639ab33f57bf",
            "subnet_id": "subnet-0b4620f69c219d7db"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a8a4e12273b5527",
            "route_table_id": "rtb-015cf639ab33f57bf",
            "subnet_id": "subnet-0c7bfe4ac2c68d71a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-065477315c6ff091c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065477315c6ff091c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-007b298521e05e009",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b298521e05e009",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-0a0e6a0abf2bf2aa3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0e6a0abf2bf2aa3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-private-us-east-1c",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-private-us-east-1c",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-0be388dbeb1085d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be388dbeb1085d07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-public-us-east-1a",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-public-us-east-1a",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-0b4620f69c219d7db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4620f69c219d7db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-public-us-east-1b",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-public-us-east-1b",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:subnet/subnet-0c7bfe4ac2c68d71a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7bfe4ac2c68d71a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000288798409",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cdc-vpc-public-us-east-1c",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cdc-vpc-public-us-east-1c",
              "kubernetes.io/cluster/cdc-eks-c7svObBs": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08a38b6b0336b4bef"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000288798409:vpc/vpc-08a38b6b0336b4bef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042d8cecda10dcbfd",
            "default_route_table_id": "rtb-062368ad20f176fd2",
            "default_security_group_id": "sg-0bb17a06de9ce77f8",
            "dhcp_options_id": "dopt-0606ad1dd7528cdab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a38b6b0336b4bef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062368ad20f176fd2",
            "owner_id": "000288798409",
            "tags": {
              "Name": "cdc-vpc"
            },
            "tags_all": {
              "Name": "cdc-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}